# makkulupy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: flake8.yaml  flit.yaml  ward.yaml
docs/: conf.py  index.rst
makkulupy/: __init__.py  exceptions.py  requests.py
makkulupy/models/: batch.py  word.py
makkulupy/tests/: test_requests.py
